--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,19 @@
-*.class
-*.log
+.bloop
+.bsp
+.cache
+.cache-main
+.cache-tests
+.classpath
+.DS_Store
+.idea
+.project
+.tmpBin
+.factorypath
+.settings
+.target
+.vscode
+bin
+ideatarget
+logs
+target
+*.iml
